force-app/main/default/objects/Agent_Onboarding_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used for externalising any values not hardcoded within the Monash Agent Management App</description>
    <fields>
        <fullName>Account_RT_Developer_Name__c</fullName>
        <label>Account RT Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Integration_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callista Integration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_RT_Developer_Name__c</fullName>
        <description>Developer Name of Record Type to be used when creating a Contact record in UniCRM to model the &quot;Role Account&quot;, basically a Contact record that corresponds to an Agency-level User used to access Agent Portal (Google Apps)</description>
        <label>Contact RT Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_AP_Integration_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Google AP Integration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordPerPage__c</fullName>
        <description>Setting to control number of Agency records displayed per page, used by the pagination feature for Agent Web Page.</description>
        <label>RecordPerPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_RT_Developer_Name__c</fullName>
        <label>Role RT Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_to_Copy__c</fullName>
        <label>Role to Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Blackout_Period__c</fullName>
        <description>Number of days prior to a future-dated termination date when agency branch creation will be blocked.</description>
        <label>Termination Blackout Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agent Onboarding Settings</label>
</CustomObject>